게임 이력에 따른 조회 - Date 추가
